@startuml CBT_Journal

entity "THERAPIST" as therapist {
  * therapist_id : INTEGER <<PK>>
  --
  full_name : VARCHAR(255)
  email : VARCHAR(255)
  specialization : VARCHAR(100)
  registration_date : DATE
}

entity "CLIENT" as client {
  * client_id : INTEGER <<PK>>
  --
  full_name : VARCHAR(255)
  email : VARCHAR(255)
  birth_date : DATE
  registration_date : DATE
}

entity "SESSION" as session {
  * session_id : INTEGER <<PK>>
  --
  * therapist_id : INTEGER <<FK>>
  * client_id : INTEGER <<FK>>
  session_date : DATETIME
  duration_minutes : INTEGER
  notes : TEXT
  session_type : VARCHAR(50)
}

entity "THOUGHT_RECORD" as thought {
  * record_id : INTEGER <<PK>>
  --
  * client_id : INTEGER <<FK>>
  record_date : DATETIME
  situation : TEXT
  automatic_thought : TEXT
  emotion : VARCHAR(100)
  emotion_intensity : INTEGER
  alternative_thought : TEXT
}

entity "MOOD_ENTRY" as mood {
  * mood_id : INTEGER <<PK>>
  --
  * client_id : INTEGER <<FK>>
  entry_date : DATETIME
  mood_score : INTEGER
  notes : TEXT
}

entity "ASSIGNMENT" as assignment {
  * assignment_id : INTEGER <<PK>>
  --
  * therapist_id : INTEGER <<FK>>
  * client_id : INTEGER <<FK>>
  title : VARCHAR(255)
  description : TEXT
  assigned_date : DATE
  due_date : DATE
  status : VARCHAR(20)
}

therapist "1" --> "0..*" session : проводить
client "1" --> "0..*" session : відвідує
client "1" --> "0..*" thought : веде
client "1" --> "0..*" mood : записує
therapist "1" --> "0..*" assignment : призначає
client "1" --> "0..*" assignment : виконує

@enduml